[gd_scene load_steps=4 format=3 uid="uid://c7smdgbd2puau"]

[ext_resource type="Script" path="res://CharacterHUDOverlay.gd" id="1_1c0nn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l38vm"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtsjq"]
bg_color = Color(0, 0.498039, 1, 1)

[node name="CharacterHUDOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1c0nn")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -6.0
offset_right = 62.0
offset_bottom = 6.0
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="GridContainer"]
custom_minimum_size = Vector2(50, 3)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_l38vm")
rounded = true
show_percentage = false

[node name="EnergyBar" type="ProgressBar" parent="GridContainer"]
custom_minimum_size = Vector2(50, 3)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_mtsjq")
rounded = true
show_percentage = false
